@startuml
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
skinparam classAttributeIconSize 0


class AdvertisementUI {
}

class AdvertisementController {
    + getAvAdvertisements()
}

class AdvertisementService {
    + getAvAdvertisements()
}

interface AdvertisementRepository {
    + findAllByStatusClosed()
}


class Item {
    - id: String
    - designation: String
    - condition: String
    - initialDate: Date
    - finalDate: Date
    - address: String
    + Item(...)
}

class Advertisement {
    - id : String
    - title: String
    - description: String
    - Date: Date
    - municipality: String
    + Advertisement(...)
}

enum AdvertisementStatus {
    designation: String
}

class Category {
    - designation: String
    + Category(...)
}

class AdvertisementMapper {
    + toEntity()
    + toDTO()
}

class AdvertisementDTO {
    - id : String
    - title: String
    - description: String
    - Date: Date
    - municipality: String
    + AdvertisementDTO(...)
}

' --- Relacionamentos ---
AdvertisementUI ..> AdvertisementController
AdvertisementController .> AdvertisementService
AdvertisementService ..> AdvertisementRepository
AdvertisementService ..> AdvertisementMapper
AdvertisementMapper ..> Advertisement
AdvertisementMapper ..> AdvertisementDTO
AdvertisementRepository "1" --> "*" Advertisement : advertisement
Advertisement --> Item : contains an
Category --> Item : belongs to
Advertisement --> AdvertisementStatus : has



@enduml